--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "crates/essential-rest-client",
 ]
 resolver = "2"
 
@@ -14,8 +15,11 @@ repository = "https://github.com/essential-contributions/essential-integration"
 anyhow = "1.0.80"
 base64 = "0.22.0"
 clap = { version = "4.5.16", features = ["derive"] }
+essential-builder-types = "0.1.0"
 essential-debugger = "0.2.0"
 essential-hash = "0.4.0"
+essential-node-api = "0.2.0"
+essential-node = "0.2.0"
 essential-sign = "0.4.0"
 essential-types = "0.3.0"
 pint-abi = "0.2.0"
@@ -28,3 +32,6 @@ serde_json = "1"
 tokio = { version = "1.39.3", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
+uuid = { version = "1.10.0", features = ["v4"] }
+
+essential-rest-client = { path = "crates/essential-rest-client", version = "0.2.0" }
