--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "crates/essential-rest-client",
+    "crates/*",
 ]
 resolver = "2"
 
@@ -18,13 +18,14 @@ clap = { version = "4.5.16", features = ["derive"] }
 essential-builder-types = "0.1.0"
 essential-debugger = "0.2.0"
 essential-hash = "0.4.0"
-essential-node-api = "0.2.0"
-essential-node = "0.2.0"
+essential-node-api = "0.3.0"
+essential-node = "0.3.0"
+essential-node-types = "0.1.0"
 essential-sign = "0.4.0"
 essential-types = "0.3.0"
-pint-abi = "0.2.0"
+pint-abi = "0.3.0"
 hex = "0.4.3"
-reqwest = "0.12.7"
+reqwest = "0.12.8"
 rpassword = "7.3.1"
 secp256k1 = { version = "0.29" }
 serde = { version = "1.0.208", features = ["derive"] }
@@ -32,6 +33,6 @@ serde_json = "1"
 tokio = { version = "1.39.3", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
-uuid = { version = "1.10.0", features = ["v4"] }
+uuid = { version = "1.11.0", features = ["v4"] }
 
 essential-rest-client = { path = "crates/essential-rest-client", version = "0.2.0" }
