--- a/apps/token/app2/Cargo.toml
+++ b/apps/token/app2/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { workspace = true }
 [dev-dependencies]
 essential-app-utils = { workspace = true, features = ["test-utils"] }
 essential-wallet = { workspace = true, features = ["test-utils"] }
-essential-builder.workspace = true
+essential-builder = { workspace = true, features = ["tracing"] }
 essential-builder-db.workspace = true
-essential-node.workspace = true
+essential-node = { workspace = true, features = ["tracing"] }
+tracing-subscriber.workspace = true
