--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 members = [
-    "crates/*",
+    "crates/essential-rest-client",
+    "apps/utils",
+    "apps/counter/app",
+    "apps/token/app",
 ]
 resolver = "2"
 
@@ -16,13 +19,18 @@ anyhow = "1.0.80"
 base64 = "0.22.0"
 clap = { version = "4.5.16", features = ["derive"] }
 essential-builder-types = "0.1.0"
+essential-builder = "0.5.0"
+essential-builder-db = "0.2.0"
 essential-debugger = "0.2.0"
 essential-hash = "0.4.0"
-essential-node-api = "0.3.0"
-essential-node = "0.3.0"
+essential-node-api = "0.4.0"
+essential-node-db = "0.3.0"
+essential-node = "0.4.0"
 essential-node-types = "0.1.0"
 essential-sign = "0.4.0"
+essential-signer = "0.3.0"
 essential-types = "0.3.0"
+essential-wallet = "0.3.0"
 pint-abi = "0.3.0"
 hex = "0.4.3"
 reqwest = "0.12.8"
@@ -33,6 +41,8 @@ serde_json = "1"
 tokio = { version = "1.39.3", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 uuid = { version = "1.11.0", features = ["v4"] }
 
 essential-rest-client = { path = "crates/essential-rest-client", version = "0.2.0" }
+essential-app-utils = { path = "apps/utils", version = "0.2.0" }
