--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -8,7 +8,6 @@ publish = false
 anyhow.workspace = true
 clap.workspace = true
 essential-app-utils.workspace = true
-essential-deploy-contract.workspace = true
 essential-hash.workspace = true
 essential-rest-client.workspace = true
 essential-types.workspace = true
@@ -17,4 +16,7 @@ tokio.workspace = true
 
 [dev-dependencies]
 essential-app-utils = { workspace = true, features = ["test-utils"] }
-essential-wallet = { workspace = true, features = ["test-utils"] }
+essential-builder.workspace = true
+essential-builder-db.workspace = true
+essential-node.workspace = true
+essential-node-db = { workspace = true }
