--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -11,17 +11,21 @@ repository.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
+essential-builder-db = { workspace = true }
+essential-builder = { workspace = true }
 essential-debugger = { workspace = true, optional = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true, optional = true }
-essential-server-types = { workspace = true }
 essential-sign = { workspace = true }
-essential-signer = { workspace = true }
+essential-node = { workspace = true, features = ["tracing"] }
+essential-node-db = { workspace = true }
+essential-node-types = { workspace = true }
 essential-types = { workspace = true }
 hex = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 toml.workspace = true
+uuid.workspace = true
 
 [features]
 test-utils = ["dep:essential-debugger", "dep:essential-rest-client"]
