--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,5 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.11.0", features = ["v4"] }
 
-essential-rest-client = { path = "crates/essential-rest-client", version = "0.4.0" }
-essential-app-utils = { path = "apps/utils", version = "0.5.0" }
+essential-rest-client = { path = "crates/essential-rest-client", version = "0.5.0" }
+essential-app-utils = { path = "apps/utils", version = "0.5.0 }
