--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -27,3 +27,4 @@ essential-builder = { workspace = true, features = ["tracing"] }
 essential-builder-db.workspace = true
 essential-node = { workspace = true, features = ["tracing"] }
 tracing-subscriber.workspace = true
+regex = "1.11.1"
