--- a/docs/code/counter-cargo.toml
+++ b/docs/code/counter-cargo.toml
@@ -4,16 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.92"
-clap = { version = "4.5.20", features = ["derive"] }
+anyhow = "1.0.93"
+clap = { version = "4.5.21", features = ["derive"] }
 essential-app-utils = "0.6.0"
 essential-hash = "0.7.0"
 essential-rest-client = "0.6.0"
 essential-types = "0.5.0"
-tokio = { version = "1.41.0", features = ["full"] }
+pint-abi = "0.6.0"
+tokio = { version = "1.41.1", features = ["full"] }
 
 [dev-dependencies]
 essential-app-utils = { version = "0.6.0", features = ["test-utils"] }
 essential-builder = "0.10.0"
 essential-builder-db = "0.5.0"
 essential-node = "0.8.0"
+serde_json = "1.0.132"
