--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ repository = "https://github.com/essential-contributions/essential-integration"
 anyhow = "1.0.80"
 base64 = "0.22.0"
 clap = { version = "4.5.16", features = ["derive"] }
-essential-builder-types = "0.2.0"
 essential-builder = "0.10.0"
 essential-builder-db = "0.5.0"
+essential-builder-types = "0.2.0"
 essential-debugger = "0.2.0"
 essential-hash = "0.7.0"
 essential-node-api = "0.8.0"
@@ -46,3 +46,5 @@ uuid = { version = "1.11.0", features = ["v4"] }
 
 essential-rest-client = { path = "crates/essential-rest-client", version = "0.6.0" }
 essential-app-utils = { path = "apps/utils", version = "0.6.0" }
+pint-deploy = { path = "crates/pint-deploy", version = "0.1.0" }
+pint-submit = { path = "crates/pint-submit", version = "0.1.0" }
