--- a/docs/code/counter-cargo.toml
+++ b/docs/code/counter-cargo.toml
@@ -11,6 +11,8 @@ essential-hash = "0.7.0"
 essential-rest-client = "0.6.0"
 essential-types = "0.5.0"
 pint-abi = "0.6.0"
+pint-deploy = "0.1.0"
+pint-submit = "0.1.0"
 tokio = { version = "1.41.1", features = ["full"] }
 
 [dev-dependencies]
