--- a/crates/pint-submit/Cargo.toml
+++ b/crates/pint-submit/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "pint-submit"
 description = "Pint package for submitting solutions to a node"
+version = "0.1.0"
 edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
